--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.2.2",
-	"appid": "wxf482e2f23a1ecc04",
+	"appid": "wxd8453d70ecfe338a",
 	"projectname": "tabbarDemo",
 	"isGameTourist": false,
 	"simulatorType": "wechat",
