--- a/project.config.json
+++ b/project.config.json
@@ -25,7 +25,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.4",
-	"appid": "wx62123ad62e0d0bd2",
+	"appid": "wxd8453d70ecfe338a",
 	"projectname": "tabbarDemo",
 	"isGameTourist": false,
 	"simulatorType": "wechat",
